--- a/pages/main.html
+++ b/pages/main.html
@@ -1,1 +1,63 @@
-<div>hello</div>
+<link href="css/app.css" rel="stylesheet" />
+<div class="phone">
+  <div class="navbar">NavBar</div>
+  <div class="main-container">
+    <p>
+      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
+      sint consectetur cupidatat
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
+      sint consectetur cupidatat
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
+      sint consectetur cupidatat
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
+      sint consectetur cupidatat
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
+      sint consectetur cupidatat
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
+      sint consectetur cupidatat
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
+      sint consectetur cupidatat
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
+      sint consectetur cupidatat
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
+      sint consectetur cupidatat
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
+      sint consectetur cupidatat
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
+      sint consectetur cupidatat
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
+      sint consectetur cupidatat
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
+      sint consectetur cupidatat
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
+      sint consectetur cupidatat
+    </p>
+  </div>
+  <div class="tab-bar">tabs</div>
+</div>
