WIP: adicionado estilo a barra de tabs

--- a/pages/main.html
+++ b/pages/main.html
@@ -1,63 +1,20 @@
 <link href="css/app.css" rel="stylesheet" />
 <div class="phone">
-  <div class="navbar">NavBar</div>
+  <div class="navbar">Unicycle App</div>
   <div class="main-container">
-    <p>
-      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
-      sint consectetur cupidatat
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
-      sint consectetur cupidatat
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
-      sint consectetur cupidatat
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
-      sint consectetur cupidatat
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
-      sint consectetur cupidatat
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
-      sint consectetur cupidatat
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
-      sint consectetur cupidatat
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
-      sint consectetur cupidatat
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
-      sint consectetur cupidatat
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
-      sint consectetur cupidatat
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
-      sint consectetur cupidatat
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
-      sint consectetur cupidatat
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
-      sint consectetur cupidatat
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
-      sint consectetur cupidatat
-    </p>
+    <div class="map-placeholder">
+      <h1>&lt;Mapa&gt;</h1>
+      <p>em desenvolvimento...</p>
+    </div>
   </div>
-  <div class="tab-bar">tabs</div>
+  <div class="tab-bar">
+    <p>Viagem atual</p>
+    <p>.....</p>
+    <p>.....</p>
+    <p>.....</p>
+    <p>.....</p>
+    <p>.....</p>
+    <p>.....</p>
+    <p>.....</p>
+  </div>
 </div>
