WIP: adicionados includes dentro do html

--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="css/style.css" rel="stylesheet" />
+    <link href="css/app.css" rel="stylesheet" />
     <script src="main.js" type="module"></script>
   </head>
 
   <body>
-    <div id="app" class="screen all-center"></div>
+    <div class="screen all-center">
+      <div id="phone" class="phone">
+        <div class="navbar">Unicycle App</div>
+        <div id="app" class="app-content"></div>
+      </div>
+    </div>
   </body>
 </html>
