--- a/pages/main.html
+++ b/pages/main.html
@@ -1,20 +1,10 @@
-<link href="css/app.css" rel="stylesheet" />
-<div class="phone">
-  <div class="navbar">Unicycle App</div>
-  <div class="main-container">
-    <div class="map-placeholder">
-      <h1>&lt;Mapa&gt;</h1>
-      <p>em desenvolvimento...</p>
-    </div>
-  </div>
-  <div class="tab-bar">
-    <p>Viagem atual</p>
-    <p>.....</p>
-    <p>.....</p>
-    <p>.....</p>
-    <p>.....</p>
-    <p>.....</p>
-    <p>.....</p>
-    <p>.....</p>
+<div class="main-container">
+  <div class="map-placeholder">
+    <h1>&lt;Mapa&gt;</h1>
+    <p>em desenvolvimento...</p>
   </div>
 </div>
+<include src="./comps/test.html" />
+</div>
+
+<script type="module"></script>
