WIP: ajustados imports para funcionarem globalmente

--- a/comps/navigation.html
+++ b/comps/navigation.html
@@ -1,8 +1,8 @@
-<div>
+<div class="float-menu">
   <button>home</button>
   <button>home</button>
 </div>
 
-<script>
+<script type="module">
   console.log("loaded");
 </script>
