--- a/pages/main.html
+++ b/pages/main.html
@@ -1,10 +1,9 @@
+<link class="dbg" include="./comps/navigation.html" />
 <div class="main-container">
   <div class="map-placeholder">
     <h1>&lt;Mapa&gt;</h1>
     <p>em desenvolvimento...</p>
   </div>
-</div>
-<include src="./comps/test.html" />
 </div>
 
 <script type="module"></script>
