WIP: adicionados icones

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <title></title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+      rel="stylesheet"
+    />
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <script src="main.js" type="module"></script>
