--- a/pages/main.html
+++ b/pages/main.html
@@ -1,9 +1,14 @@
-<link class="dbg" include="./comps/navigation.html" />
+<!-- <link class="float-menu nav-container" include="./comps/navigation.html" /> -->
 <div class="main-container">
-  <div class="map-placeholder">
-    <h1>&lt;Mapa&gt;</h1>
-    <p>em desenvolvimento...</p>
-  </div>
+  <h1>hello</h1>
 </div>
+<div class="tab-bar">
+  <p>hello</p>
+  <p>hello</p>
+  <p>hello</p>
+  <p>hello</p>
+</div>
+<!-- <div class="tabbed dbg"> -->
+<!-- </div> -->
 
 <script type="module"></script>
