WIP: ajustado esquema de recarregamento de páginas

--- a/pages/main.html
+++ b/pages/main.html
@@ -1,14 +1,8 @@
-<!-- <link class="float-menu nav-container" include="./comps/navigation.html" /> -->
-<div class="main-container">
+<link class="float-menu nav-container" include="./comps/navigation.html" />
+<div>
   <h1>hello</h1>
 </div>
-<div class="tab-bar">
-  <p>hello</p>
-  <p>hello</p>
-  <p>hello</p>
-  <p>hello</p>
-</div>
-<!-- <div class="tabbed dbg"> -->
-<!-- </div> -->
 
-<script type="module"></script>
+<script type="module">
+  console.log("hello from module");
+</script>
