--- a/pages/main.html
+++ b/pages/main.html
@@ -1,8 +1,14 @@
 <link class="float-menu nav-container" include="./comps/navigation.html" />
-<div>
-  <h1>hello</h1>
+<div class="all-center">
+  <div>
+    <h1>Página em desenvolvimento</h1>
+    <p>
+      Esta página foi removida para ser refatorada e o serviço estará de volta
+      em breve
+    </p>
+  </div>
 </div>
 
 <script type="module">
-  console.log("hello from module");
+  console.log("[Pagina em refatoração]");
 </script>
